# secAgent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: basic_recon.py  browser_intercept.py  browser_scan.py  custom_tool_example.py  full_assessment.py  sigma_single.py
secagent/: __init__.py  main.py
secagent/agents/: __init__.py  base_agent.py  browser_agent.py  orchestrator.py  recon_agent.py  sigma_agent.py  vuln_agent.py
secagent/core/: __init__.py  agent_runner.py  config.py  mcp_runner.py  multi_agent.py
secagent/mcp_servers/: browser_server.py  recon_server.py
secagent/prompts/: __init__.py  sigma_single.py
secagent/tools/: __init__.py  memory_tools.py  network_tools.py  pentest_tools.py  script_tools.py  web_tools.py
secagent/web/: app.py  database.py  models.py  schemas.py
secagent/web/routers/: crud.py  files.py  mcps.py  memories.py  projects.py  vulns.py
secagent/web/static/: index.html
